--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,7 @@
     margin-bottom: 1.5rem;
   }
   
-  .heading-tertiary {
-    font-size: 1.5rem;
-    color: var(--primary-color);
-    margin-bottom: .5rem;
-  }
+
   
 
 
@@ -323,6 +319,22 @@ a {
   animation-delay: 0.1s;
 }
 .sub-menu .menu-item:nth-child(3) {
+  animation-duration: 0.4s;
+  animation-delay: 0.2s;
+}
+.sub-menu .menu-item:nth-child(4) {
+  animation-duration: 0.4s;
+  animation-delay: 0.2s;
+}
+.sub-menu .menu-item:nth-child(5) {
+  animation-duration: 0.4s;
+  animation-delay: 0.2s;
+}
+.sub-menu .menu-item:nth-child(6) {
+  animation-duration: 0.4s;
+  animation-delay: 0.2s;
+}
+.sub-menu .menu-item:nth-child(7) {
   animation-duration: 0.4s;
   animation-delay: 0.2s;
 }
@@ -610,6 +622,7 @@ a {
 /* footer */
 
 footer {
+  
   background-color: #2A363B repeat center;
   display: table;
   width: 100vw;
@@ -621,11 +634,13 @@ footer {
 }
 
 .wrapper {
+  
   display: table-cell;
   vertical-align: middle;
 }
 
 footer small {
+  
   color: #000000;
   letter-spacing: .025rem;
   margin-bottom: 1.5rem;
@@ -648,5 +663,13 @@ footer small {
 
   
   body {
+
   background-color: rgb(139, 201, 255);
+  }
+.recherche{
+    width: 100%;
+    height: 20px;
+    color: yellow;
+    z-index: 1;
+    border-radius: 5px;
   }
